src/vk_mem_alloc.rs

#[test]
fn bindgen_test_layout_VmaStatInfo() {
    assert_eq!(
        ::std::mem::size_of::<VmaStatInfo>(),
        80usize,
        concat!("Size of: ", stringify!(VmaStatInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<VmaStatInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(VmaStatInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).blockCount as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(blockCount)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).allocationCount as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(allocationCount)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).unusedRangeCount as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(unusedRangeCount)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).usedBytes as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(usedBytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).unusedBytes as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(unusedBytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).allocationSizeMin as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(allocationSizeMin)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).allocationSizeAvg as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(allocationSizeAvg)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).allocationSizeMax as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(allocationSizeMax)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).unusedRangeSizeMin as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(unusedRangeSizeMin)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).unusedRangeSizeAvg as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(unusedRangeSizeAvg)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStatInfo>())).unusedRangeSizeMax as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStatInfo),
            "::",
            stringify!(unusedRangeSizeMax)
        )
    );
}
/// General statistics from current state of Allocator.
#[repr(C)]
pub struct VmaStats {
    pub memoryType: [VmaStatInfo; 32usize],
    pub memoryHeap: [VmaStatInfo; 16usize],
    pub total: VmaStatInfo,
}
#[test]
fn bindgen_test_layout_VmaStats() {
    assert_eq!(
        ::std::mem::size_of::<VmaStats>(),
        3920usize,
        concat!("Size of: ", stringify!(VmaStats))
    );
    assert_eq!(
        ::std::mem::align_of::<VmaStats>(),
        8usize,
        concat!("Alignment of ", stringify!(VmaStats))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStats>())).memoryType as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStats),
            "::",
            stringify!(memoryType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStats>())).memoryHeap as *const _ as usize },
        2560usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStats),
            "::",
            stringify!(memoryHeap)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaStats>())).total as *const _ as usize },
        3840usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaStats),
            "::",
            stringify!(total)
        )
    );
}
extern "C" {
    /// Retrieves statistics from current state of the Allocator.
    pub fn vmaCalculateStats(allocator: VmaAllocator, pStats: *mut VmaStats);
}
extern "C" {
    /// Builds and returns statistics as string in JSON format.
    /// ** @param[out] ppStatsString Must be freed using vmaFreeStatsString() function.
    /// */
    pub fn vmaBuildStatsString(
        allocator: VmaAllocator,
        ppStatsString: *mut *mut ::std::os::raw::c_char,
        detailedMap: VkBool32,
    );
}
extern "C" {
    pub fn vmaFreeStatsString(allocator: VmaAllocator, pStatsString: *mut ::std::os::raw::c_char);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VmaPool_T {
    _unused: [u8; 0],
}
pub type VmaPool = *mut VmaPool_T;
#[repr(i32)]
/// \struct VmaPool
/// \brief Represents custom memory pool
///
/// Fill structure VmaPoolCreateInfo and call function vmaCreatePool() to create it.
/// Call function vmaDestroyPool() to destroy it.
///
/// For more information see [Custom memory pools](@ref choosing_memory_type_custom_memory_pools).
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum VmaMemoryUsage {
    /// No intended memory usage specified.
    /// Use other members of VmaAllocationCreateInfo to specify your requirements.
    VMA_MEMORY_USAGE_UNKNOWN = 0,
    /// Memory will be used on device only, so fast access from the device is preferred.
    /// It usually means device-local GPU (video) memory.
    /// No need to be mappable on host.
    /// It is roughly equivalent of `D3D12_HEAP_TYPE_DEFAULT`.
    ///
    /// Usage:
    ///
    /// - Resources written and read by device, e.g. images used as attachments.
    /// - Resources transferred from host once (immutable) or infrequently and read by
    /// device multiple times, e.g. textures to be sampled, vertex buffers, uniform
    /// (constant) buffers, and majority of other types of resources used by device.
    ///
    /// Allocation may still end up in `HOST_VISIBLE` memory on some implementations.
    /// In such case, you are free to map it.
    /// You can use #VMA_ALLOCATION_CREATE_MAPPED_BIT with this usage type.
    VMA_MEMORY_USAGE_GPU_ONLY = 1,
    /// Memory will be mappable on host.
    /// It usually means CPU (system) memory.
    /// Resources created in this pool may still be accessible to the device, but access to them can be slower.
    /// Guarantees to be `HOST_VISIBLE` and `HOST_COHERENT`.
    /// CPU read may be uncached.
    /// It is roughly equivalent of `D3D12_HEAP_TYPE_UPLOAD`.
    ///
    /// Usage: Staging copy of resources used as transfer source.
    VMA_MEMORY_USAGE_CPU_ONLY = 2,
    /// Memory that is both mappable on host (guarantees to be `HOST_VISIBLE`) and preferably fast to access by GPU.
    /// CPU reads may be uncached and very slow.
    ///
    /// Usage: Resources written frequently by host (dynamic), read by device. E.g. textures, vertex buffers, uniform buffers updated every frame or every draw call.
    VMA_MEMORY_USAGE_CPU_TO_GPU = 3,
    /// Memory mappable on host (guarantees to be `HOST_VISIBLE`) and cached.
    /// It is roughly equivalent of `D3D12_HEAP_TYPE_READBACK`.
    ///
    /// Usage:
    ///
    /// - Resources written by device, read by host - results of some computations, e.g. screen capture, average scene luminance for HDR tone mapping.
    /// - Any resources read or accessed randomly on host, e.g. CPU-side copy of vertex buffer used as source of transfer, but also used for collision detection.
    VMA_MEMORY_USAGE_GPU_TO_CPU = 4,
    /// Memory mappable on host (guarantees to be `HOST_VISIBLE`) and cached.
    /// It is roughly equivalent of `D3D12_HEAP_TYPE_READBACK`.
    ///
    /// Usage:
    ///
    /// - Resources written by device, read by host - results of some computations, e.g. screen capture, average scene luminance for HDR tone mapping.
    /// - Any resources read or accessed randomly on host, e.g. CPU-side copy of vertex buffer used as source of transfer, but also used for collision detection.
    VMA_MEMORY_USAGE_MAX_ENUM = 2147483647,
}
impl VmaAllocationCreateFlagBits {
    /// \brief Set this flag if the allocation should have its own memory block.
    ///
    /// Use it for special, big resources, like fullscreen images used as attachments.
    ///
    /// This flag must also be used for host visible resources that you want to map
    /// simultaneously because otherwise they might end up as regions of the same
    /// `VkDeviceMemory`, while mapping same `VkDeviceMemory` multiple times
    /// simultaneously is illegal.
    ///
    /// You should not use this flag if VmaAllocationCreateInfo::pool is not null.
    pub const VMA_ALLOCATION_CREATE_DEDICATED_MEMORY_BIT: VmaAllocationCreateFlagBits =
        VmaAllocationCreateFlagBits(1);
}
impl VmaAllocationCreateFlagBits {
    /// \brief Set this flag to only try to allocate from existing `VkDeviceMemory` blocks and never create new such block.
    ///
    /// If new allocation cannot be placed in any of the existing blocks, allocation
    /// fails with `VK_ERROR_OUT_OF_DEVICE_MEMORY` error.
    ///
    /// You should not use #VMA_ALLOCATION_CREATE_DEDICATED_MEMORY_BIT and
    /// #VMA_ALLOCATION_CREATE_NEVER_ALLOCATE_BIT at the same time. It makes no sense.
    ///
    /// If VmaAllocationCreateInfo::pool is not null, this flag is implied and ignored.
    pub const VMA_ALLOCATION_CREATE_NEVER_ALLOCATE_BIT: VmaAllocationCreateFlagBits =
        VmaAllocationCreateFlagBits(2);
}
impl VmaAllocationCreateFlagBits {
    /// \brief Set this flag to use a memory that will be persistently mapped and retrieve pointer to it.
    ///
    /// Pointer to mapped memory will be returned through VmaAllocationInfo::pMappedData.
    ///
    /// Is it valid to use this flag for allocation made from memory type that is not
    /// `HOST_VISIBLE`. This flag is then ignored and memory is not mapped. This is
    /// useful if you need an allocation that is efficient to use on GPU
    /// (`DEVICE_LOCAL`) and still want to map it directly if possible on platforms that
    /// support it (e.g. Intel GPU).
    ///
    /// You should not use this flag together with #VMA_ALLOCATION_CREATE_CAN_BECOME_LOST_BIT.
    pub const VMA_ALLOCATION_CREATE_MAPPED_BIT: VmaAllocationCreateFlagBits =
        VmaAllocationCreateFlagBits(4);
}
impl VmaAllocationCreateFlagBits {
    /// Allocation created with this flag can become lost as a result of another
    /// allocation with #VMA_ALLOCATION_CREATE_CAN_MAKE_OTHER_LOST_BIT flag, so you
    /// must check it before use.
    ///
    /// To check if allocation is not lost, call vmaGetAllocationInfo() and check if
    /// VmaAllocationInfo::deviceMemory is not `VK_NULL_HANDLE`.
    ///
    /// For details about supporting lost allocations, see Lost Allocations
    /// chapter of User Guide on Main Page.
    ///
    /// You should not use this flag together with #VMA_ALLOCATION_CREATE_MAPPED_BIT.
    pub const VMA_ALLOCATION_CREATE_CAN_BECOME_LOST_BIT: VmaAllocationCreateFlagBits =
        VmaAllocationCreateFlagBits(8);
}
